crates/zhuye-cli/src/tui_core/bottom_pane/snapshots/zhuye_cli__tui_core__bottom_pane__footer__tests__footer_mode_indicator_narrow_overlap_hides.snap
---
source: crates/reflect-tui/src/tui_core/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Plan mode (shift+tab to cycle)                  "
