crates/zhuye-cli/src/tui_core/bottom_pane/snapshots/zhuye_cli__tui_core__bottom_pane__footer__tests__footer_shortcuts_context_running.snap
---
source: crates/reflect-tui/src/tui_core/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? for shortcuts                                             72% context left  "
