crates/zhuye-cli/src/tui_core/bottom_pane/snapshots/zhuye_cli__tui_core__bottom_pane__footer__tests__footer_status_line_with_active_agent_label.snap
---
source: crates/reflect-tui/src/tui_core/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Status line content · Robie [explorer]                                        "
